logs/Slang/generated/hdlconv/hdlconvertor_p736.sv.log
name: hdlconvertor_p736
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p736.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p736.sv:5:1: error: unknown module 'vdff'
vdff #(10, 15)
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p736.sv:7:1: error: unknown module 'vdff'
vdff
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p736.sv:9:1: error: unknown module 'vdff'
vdff #(.delay(12)) mod_c (.out(out_c), .in(in_c), .clk(clk));
^~~~
